@@ -1,5 +1,6 @@
 package com.worknest.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -7,32 +8,35 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Configuration
 public class CorsConfig {
+
+    @Value("${app.cors.allowed-origins:http://localhost:3000,http://localhost:5173}")
+    private String allowedOrigins;
 
     @Bean
     public CorsFilter corsFilter() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
 
-        // Allow credentials
         config.setAllowCredentials(true);
-
-        // Allow all origins for Phase 1 testing (restrict in production)
-        config.addAllowedOriginPattern("*");
-
-        // Allow common headers including tenant header
-        config.setAllowedHeaders(Arrays.asList("*"));
-
-        // Allow all HTTP methods
+        config.setAllowedOriginPatterns(parseAllowedOrigins(allowedOrigins));
+        config.setAllowedHeaders(List.of("*"));
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-
-        // Expose custom headers
         config.setExposedHeaders(Arrays.asList("X-Tenant-ID", "Authorization"));
 
         source.registerCorsConfiguration("/**", config);
         return new CorsFilter(source);
+    }
+
+    private List<String> parseAllowedOrigins(String rawOrigins) {
+        return Arrays.stream(rawOrigins.split(","))
+                .map(String::trim)
+                .filter(value -> !value.isBlank())
+                .collect(Collectors.toList());
     }
 }
 
